# OpenBooks

./: .gitignore  README.md  data.txt  index.html  openbooks.db  pyproject.toml  run.py  script.js  style.css
backend/: main.py
frontend/: index.html
openbooks.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
